objects/SMAX_PS_MTE_Change_Log__c.object
<CustomObject>
    <description>Used to track changes for MTE.  The MTE is stored as an Installed product.  This table is populated when the IP record for an MTE record is updated</description>
    <label>MTE Change Log</label>
    <nameField>
        <displayFormat>MCL-{0000000}</displayFormat>
        <label>MTE Change Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MTE Change Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>SMAX_PS_Group__c</fullName>
        <label>Group</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_PKI_ID__c</fullName>
        <label>PKI ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>MTE Change Logs (Parent)</relationshipLabel>
        <relationshipName>MTE_Change_Logs_Parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>MTE Change Logs</relationshipLabel>
        <relationshipName>MTE_Change_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Top_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Top Level</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>MTE Change Logs (Top Level)</relationshipLabel>
        <relationshipName>MTE_Change_Logs_Top_Level</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Department__c</fullName>
        <label>Department</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_PKI_MTE_ID__c</fullName>
        <label>PKI MTE ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_of_Changes__c</fullName>
        <description>Will list out the changes mad to the record</description>
        <label>Summary of Changes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Description__c</fullName>
        <label>Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Field_Notes__c</fullName>
        <label>Field Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Tool_Status__c</fullName>
        <label>Tool Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Model_Number__c</fullName>
        <label>Model Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_Calibrated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Calibrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Long_Description__c</fullName>
        <label>Long Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_MTE_Manufacturer__c</fullName>
        <label>MTE Manufacturer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Installed_Product__c</fullName>
        <label>Installed Product</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>MTE Change Logs</relationshipLabel>
        <relationshipName>MTE_Change_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_MTE_Change_Reason__c</fullName>
        <label>MTE Change Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Serial_Lot_Number__c</fullName>
        <label>Serial/Lot Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Technical_Manager__c</fullName>
        <description>Text value of formula from MTE IP Record at time of record create</description>
        <label>Technical Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Summary_of_Changes__c</fullName>
        <description>Will list out the changes made to the record</description>
        <label>Summary of Changes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MTE_Custom_Calibration_Period__c</fullName>
        <description>From MTE IP - is set at time of record creation based on value of formula on IP</description>
        <inlineHelpText>Fixed at time of record creation to current value from MTE IP record.</inlineHelpText>
        <label>MTE Custom Calibration Period</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Last_Calibration_Date__c</fullName>
        <label>Last Calibration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Next_Calibration_Date__c</fullName>
        <label>Next Calibration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_MTE_Calibration_Period__c</fullName>
        <label>MTE Calibration Period</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_MTE_Change_Description__c</fullName>
        <label>MTE Change Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Recalculate_MTE_Period__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recalculate MTE Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Responsible_Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>MTE Change Logs</relationshipLabel>
        <relationshipName>MTE_Change_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_MTE_Custom_Calibration_Period_Nu__c</fullName>
        <label>MTE Custom Calibration Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>